--- a/chance/bookBeiDou.html
+++ b/chance/bookBeiDou.html
@@ -50,6 +50,7 @@
                 <p>廣設皈依路。大開解謝門。延齡與度厄。持誦各沾恩。</p>
                 <br>
                 <h1>太上玄靈北斗本命延生妙經</h1>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <p>爾時。太上老君。於永壽元年正月七日。在太清境上。</p>
                 <p>太極宮中。觀見眾生。億劫漂沉。周廻生死。或居人道。生在中華。</p>
                 <p>或生夷狄之中。或生蠻戎之內。或富或貴。或賤或貧。</p>
