--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -50,6 +50,7 @@
                 <br><br>
 
                 <h1>南宮孚佑帝君降筆大洞真經</h1>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <br>
                 <p>孚佑帝君讚曰</p>
                 <p>關聖帝君。作事清白不愧為聖。行為端正方可為神。</p>
