--- a/chance/bookHuaTuo.html
+++ b/chance/bookHuaTuo.html
@@ -86,6 +86,7 @@
                 <br><br>
                 <h1>東天華仙翁嚴禁心經</h1>
                 <h1>志心皈命禮</h1>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <br>
                 <p>先天曰</p>
                 <p>太上大天尊  世受漢朝天  存台皆由命</p>
