--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -42,7 +42,7 @@
 
                 <h1>南天文衡聖帝寶誥  志心皈命禮</h1>
                 <br>
-                <p>大上神威。英文雄武。精忠大義。高節清廉。</p>
+                <p>太上神威。英文雄武。精忠大義。高節清廉。</p>
                 <p>協運皇圖。德崇言正。掌儒道釋教之權。管天地人才之柄。</p>
                 <p>上司三十六天。星辰雲漢。下轄七十二地。土壘幽酆。</p>
                 <p>秉註生功德。延壽丹書。執定生死罪過。奪命黑籍。</p>
@@ -55,14 +55,15 @@
 
                 <h1>關聖帝君降筆真經</h1>
                 <br>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <p>吾是漢關聖帝。 敕諭大眾聽聞。</p>
                 <p>世上不齊等事。 全憑一點真心。</p>
                 <p>正直光明不屈。 死生順逆當分。</p>
-                <p>           (先主、桓侯)</p>
+                <p>(皇:先主、叔:桓侯)</p>
                 <p>吾嘗下遊漢季。 結盟皇叔三人。</p>
                 <p>桃園名重千古。 單刀秉燭於今。</p>
                 <p>寄曹明來明去。 吞吳為漢超昇。</p>
-                <p>  (嘉聖)</p>
+                <p>(憐我:嘉聖)</p>
                 <p>上帝憐我忠耿。 獨敕宣化幽明。</p>
                 <p>令吾日遊天下。 鑒別忠佞紛紛。</p>
                 <p>一切貪殘奸巧。 還償果報斤斤。</p>
@@ -71,7 +72,7 @@
                 <p>貧富先交朋友。 朋友乃是五倫。</p>
                 <p>信心內外平等。 何妨蹇難災迍。</p>
                 <p>曹操無底深險。 現今受罪陰冥。</p>
-                <p>(武侯)</p>
+                <p>(孔明:武侯)</p>
                 <p>孔明只緣忠義。 幽冥群奉為神。</p>
                 <p>直心直受真福。 巧計巧來禍因。</p>
                 <p>有過昭如日月。 無私天地同群。</p>
@@ -97,6 +98,7 @@
                 <p>不許生身人世。 阿鼻地獄呻吟。</p>
                 <p>那時悔過已晚。 急早配服法文。</p>
                 <p>回頭諸惡莫作。 勉力眾善奉行。</p>
+                <p>(誦完此段3跪九叩)</p>
                 <br>
 
                 <h1>關聖帝君應驗桃園明聖經</h1>
@@ -142,10 +144,10 @@
                 <p>偈曰</p>
                 <p>吾本天樞第六星。 臨凡欲使萬方甯。 形容雖去神猶在。留得精英震百靈。</p>
                 <br>
-                <p>明聖經。大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙(大帝)無主轄。</p>
+                <p>明聖經。大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙(張仙大帝)無主轄。</p>
                 <p>敕令隨吾為從神。檢點少男與少女。或損陰騭絕子孫。送生催生及難產。</p>
                 <p>魅妖傷殘癍痘疹。如有焚香諷誦者。轉禍為祥顯聖靈。今有塑畫吾像者。</p>
-                <p>側立張仙(大帝)持彈弓。鑒知戰國侵凌亂。命吾臨凡救萬民。</p>
+                <p>側立張仙(張仙大帝)持彈弓。鑒知戰國侵凌亂。命吾臨凡救萬民。</p>
                 <p>玉皇賜吾名和姓。子胥五轉做忠臣。</p>
                 <p>臨潼解釋諸候難。絕卻奸秦并國心。</p>
                 <p>楚無道。酒荒淫。昭關過此難。吳越動刀兵。</p>
@@ -171,10 +173,10 @@
                 <p>運籌固識少經綸。三鄴茅廬。臥龍晏起。大夢誰先覺。</p>
                 <p>平生我(相)盡知。草堂春睡足。窗外日遲遲。未出茅廬。</p>
                 <p>三分已定。孔明（武侯）原是廣慧星。即是前朝嚴子陵（先師）。</p>
-                <p>此生諸葛亮（相）。再宋朱文公。輪迴三世相。永不下凡塵。</p>
+                <p>此生諸葛亮（諸葛相）。再宋朱文公。輪迴三世相。永不下凡塵。</p>
                 <p>鼎足三分嫌地窄。江山今換許多人。大哥(先主)已在清虛府。</p>
                 <p>關某(聖帝)今掌三天門。三弟(桓侯)四川為土谷。每起忠良護國心。</p>
-                <p>在宋易姓岳飛（武穆）將。在唐改諱曰張巡（公）。輪迴三轉皆忠烈。</p>
+                <p>在宋易姓岳飛（武穆）將。在唐改諱曰張巡（張公）。輪迴三轉皆忠烈。</p>
                 <p>上帝封為護國神。小可兵戈不差汝（聖）。大難危邦再下塵。</p>
 
                 <p>天下城隍皆將相。 正直為神古至今。</p>
@@ -205,6 +207,7 @@
                 <p>偃月刀。磨仍快。嘆兄弟不再。</p>
                 <p>臥蠶眉。鎖未開。恨江山幾改。</p>
                 <p>亙古功名難比並。三天門下封元帥。稽首頓首。</p>
+                <p>(誦完此段3跪九叩)</p>
                 <br>
                 <p>上帝敕令。各部將帥。經傳下界。</p>
                 <p>抄錄諷誦。如世人能遵行。</p>
@@ -310,7 +313,7 @@
                 <p>不獨此也。現在身列文儒。亦妄行指駁。</p>
                 <p>吾因周子凜禀持誦多年。只得註解明白。</p>
                 <p>如再有擅行詆毀者。輕則令瘟火滅之。</p>
-                <p>重則命周倉（將軍）斬之。毋悔。</p>
+                <p>重則命周倉（周將軍）斬之。毋悔。</p>
 
 
                 <p>明聖經。本係夢與玉泉寺僧。僧醒而傳述。</p>
@@ -341,6 +344,7 @@
                 <p>將此語著</p>
                 <p>靈官傳世知之。為此述告周宰人等。</p>
                 <p>一心體此。以心印心。心在人中。日在天上。欽哉勿忽。</p>
+                <p>(誦完此段3跪九叩)</p>
                 <br>
                 <h1>收經讚</h1>
                 <br>
@@ -348,44 +352,6 @@
                 <p>正氣滿乾坤。無量度人。受持利益亨。</p>
                 <p>大聖伏魔蕩寇救苦救難大天尊。(三稱)</p>
                 <br><br>
-
-                <h1>關聖帝君覺世真經</h1>
-                <br>
-                <p>帝君曰。人生在世。貴盡忠孝節義等事。</p>
-                <p>方於人道無愧。可立於天地之間。若不盡忠孝節義等事。</p>
-                <p>身雖在世。其心己死。是謂偷生。凡人心即神。</p>
-                <p>神即心。無愧心、無愧神。若是欺心。便是欺神。</p>
-                <p>故、君子三畏四知。以慎其獨。勿謂暗室可欺。</p>
-                <p>屋漏可窺。一動一靜。神明鑒察。十手十目。理所必至。</p>
-                <p>況報應昭昭。不爽毫髮。淫為萬惡首。孝為百行原。</p>
-                <p>但有逆理。於心有愧者。勿謂有利而行之。</p>
-                <p>凡有合理。於心無愧者。勿謂無利而不行。</p>
-                <p>若負吾教。請試吾刀。</p>
-                <p>敬天地。禮神靈。奉祖先。孝雙親。守王法。重師尊。</p>
-                <p>愛友弟。信朋友。睦宗族。和鄉鄰。別夫婦。教子孫。</p>
-                <p>時行方便。廣積陰功。救難濟急。恤孤憐貧。創修廟宇。</p>
-                <p>印造經文。捨藥施茶。戒殺放生。造橋修路。矜寡拔困。</p>
-                <p>重粟惜福。排難解紛。捐資成美。垂訓教人。冤讎解釋。</p>
-                <p>斗秤公平。親近有德。遠避凶人。隱惡揚善。利物救民。</p>
-                <p>回心向道。改過自新。滿腔仁慈。惡念不存。一切善事。</p>
-                <p>信心奉行。人雖不見。神已早聞。加福增壽。添子益孫。</p>
-                <p>災消病癒。禍患不侵。人物咸甯。吉星照臨。若存惡心。</p>
-                <p>不行善事。淫人妻女。破人婚姻。壞人名節。妒人技能。</p>
-                <p>謀人財產。唆人爭訟。損人利己。肥家潤身。恨天怨地。</p>
-                <p>罵雨呵風。謗聖毀賢。滅像欺神。宰殺牛犬。穢溺字紙。</p>
-                <p>恃勢辱善。倚富壓貧。離人骨肉。間人兄弟。不信正道。</p>
-                <p>姦盜邪淫。好尚奢詐。不重勤儉。輕棄五穀。不報有恩。</p>
-                <p>瞞心昧己。大斗小秤。假立邪教。引誘愚人。詭說昇天。</p>
-                <p>歛物行淫。明瞞暗騙。橫言曲語。白日詛咒。背地謀害。</p>
-                <p>不存天理。不順人心。不信報應。引人作惡。不修片善。</p>
-                <p>行諸惡事。官詞口舌。水火盜賊。惡毒瘟疫。生敗產蠢。</p>
-                <p>殺身亡家。男盜女淫。近報在身。遠報子孫。神明鑒察。</p>
-                <p>毫髮不紊。善惡兩途。禍福攸分。行善福報。作惡禍臨。</p>
-                <p>吾作斯語。願人奉行。言雖淺近。大益身心。戲侮吾言。</p>
-                <p>斬首分形。有能持誦。消凶聚慶。求子得子。求壽得壽。</p>
-                <p>富貴功名。皆能有成。凡有所祈。如意而獲。萬禍雪消。</p>
-                <p>千祥雲集。諸如此福。惟善可致。吾本無私。惟佑善人。</p>
-                <p>眾善奉行。毋怠厥志。</p>
                 
             </div>
 	    </div>
