--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -43,6 +43,7 @@
             <li><a href="bookChengHuang.html">城隍經</a></li>
             <li><a href="bookHuaTuo.html">華佗經</a></li>
             <li><a href="bookShengYu.html">聖諭</a></li>
+            <li><a href="bookJueShi.html">覺世真經</a></li>
             <li><a href="bookInducing.html">感應篇</a></li>
             <li><a href="bookQuiet.html">清靜經</a></li>
             <li><a href="bookTenShanYa.html">十善業</a></li>
