--- a/chance/bookZaoWang.html
+++ b/chance/bookZaoWang.html
@@ -61,6 +61,7 @@
                 <p>(金經誦畢焚香九叩禮續誦)     </p>
                 <br><br>
                 <h1>竈王神經</h1>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <br>
                 <p>竈王菩薩竈神經 竈神原來在天庭</p>
                 <p>只因人世心改變 玉帝差吾下凡塵</p>
@@ -134,6 +135,7 @@
                 <p>吾神不虛說 保你富貴全 不敬吾神者 枉生塵世間</p>
                 <br><br>
                 <h1>竈君降筆文</h1>
+                <p>(註:以下經文的吾、我都讀做"聖")</p>
                 <br>
                 <p>教事已停 吾來降臨 一家之主 萬戶福神</p>
                 <p>職掌冊簿 絲毫奏呈 時逢末劫 苦救眾生</p>
