--- a/g-ton/elements.html
+++ b/g-ton/elements.html
@@ -19,7 +19,31 @@
 
 			<!-- Header -->
 			<header id="header">
-				<!-- pageHeader.html -->
+				<h1 id="logo"><a href="index.html">G-TON</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">公司簡介(首頁)</a></li>
+						<li>
+							<a href="#">產品介紹</a>
+							<ul>
+								<li><a href="left-sidebar.html">產品1</a></li>
+								<li><a href="right-sidebar.html">產品2</a></li>
+								<li><a href="no-sidebar.html">產品3</a></li>
+								<li>
+									<a href="#">電子產品</a>
+									<ul>
+										<li><a href="#">手機</a></li>
+										<li><a href="#">電腦</a></li>
+										<li><a href="#">耳機</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a href="elements.html">最新消息</a></li>
+						<li><a href="elements.html">聯絡我們</a></li>
+						<li><a href="#" class="button primary">登錄</a></li>
+					</ul>
+				</nav>
 			</header>
 
 			<!-- Main -->
@@ -385,7 +409,17 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<!-- pageFooter.html -->
+				<ul class="icons">
+					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
 			</footer>
 
 		</div>
@@ -399,7 +433,6 @@
 		<script src="js/breakpoints.min.js"></script>
 		<script src="js/util.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/global.js"></script>
 
 	</body>
 </html>
