--- a/g-ton/index.html
+++ b/g-ton/index.html
@@ -1,208 +1,149 @@
-<!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Landed by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="css/main.css" />
-		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload landing">
-		<div id="page-wrapper">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="G-Ton">
+    <meta name="author" content="Benson">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-			<!-- Header -->
-			<header id="header">
-				<h1 id="logo"><a href="index.html">G-TON</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">公司簡介(首頁)</a></li>
-						<li>
-							<a href="#">產品介紹</a>
-							<ul>
-								<li><a href="left-sidebar.html">產品1</a></li>
-								<li><a href="right-sidebar.html">產品2</a></li>
-								<li><a href="no-sidebar.html">產品3</a></li>
-								<li>
-									<a href="#">電子產品</a>
-									<ul>
-										<li><a href="#">手機</a></li>
-										<li><a href="#">電腦</a></li>
-										<li><a href="#">耳機</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li><a href="elements.html">最新消息</a></li>
-						<li><a href="elements.html">聯絡我們</a></li>
-						<li><a href="#" class="button primary">登錄</a></li>
-					</ul>
-				</nav>
-			</header>
+	<title>G-Ton</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+   
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<body class="bg-dark">
+	<header id="header">
+        <!-- pageHeader.html -->
+    </header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>G-TON</h2>
-							<p>自我介紹</p>
-						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
+    <main>
+	  	<section class="py-5 text-center bg-dark">
+		    <div class="row py-lg-5">
+		      <div class="col-lg-auto col-md-8 mx-auto">
+		        <h1 class="fw-light text-white">邁向下一個工業時代</h1>
+		        <p class="lead text-white">跟隨工業4.0的浪潮，機電零部件需要有完整、更多元的選擇，技騰應運而生。</p>
+		        <p class="lead text-white">技騰的服務宗旨在提供客戶各產業完整的機電配套方案及更即時的物料供給流程。</p>
+		        <p class="lead text-white">技騰提供多品牌符合CE、UL及其他地區及行業專用認證產品。</p>
+		        <img src="images/banner.jpg" class="img-fluid" alt="Responsive image">
+		      </div>
+		    </div>
+	  	</section>
 
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
-									<header>
-										<h2>第二頁介紹</h2>
-										<p>介紹(小標題)</p>
-									</header>
-								</div>
-								<div class="col-4 col-12-medium">
-									<p>介紹內文</p>
-								</div>
-								<div class="col-4 col-12-medium">
-									<p>介紹內文2</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>第二頁介紹</h2>
-							<p>介紹2(小標題)</p>
-						</header>
-						<p>介紹2內文</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>第三頁介紹</h2>
-							<p>介紹3(小標題)</p>
-						</header>
-						<p>介紹3內文</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>第四頁介紹</h2>
-							<p>介紹4(小標題)</p>
-						</header>
-						<div class="box alt">
-							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
-					</div>
-				</section>
-
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>第五頁</h2>
-							<p>5(小標題)</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
-
-			<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
-
+	  	<!-- 完整的產品方案 -->
+	  	<div class="album py-3 bg-body-tertiary bg-dark">
+		    <div class="container text-center">
+		    	<div class="row py-2">
+		      		<h1 class="text-white">完整的產品方案</h1>
+		      	</div>
+		      	<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+		        	<div class="col border border-3 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<h5 class="py-1 my-1 text-white">低壓工程開關及安全產品</h5>
+		          			<img class="img-fluid my-1" src="images/pic1-1.jpg" alt="低壓工程開關">
+		          			<img class="img-fluid py-1 my-1" src="images/pic1-2.jpg" alt="安全產品">
+		          		</div>
+		        	</div>
+		        	<div class="col border border-3 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<h5 class="py-1 my-1 text-white">電氣/通訊連接</h5>
+		          			<img class="img-fluid my-1" src="images/pic2-1.jpg" alt="電氣連接">
+		          			<img class="img-fluid py-1 my-1" src="images/pic2-2.jpg" alt="通訊連接">
+		          		</div>
+		        	</div>
+		        	<div class="col border border-3 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<h5 class="py-1 my-1 text-white">自動化產品</h5>
+		          			<img class="img-fluid my-1" src="images/pic3-1.jpg" alt="自動化產品1">
+		          			<img class="img-fluid py-1 my-1" src="images/pic3-2.jpg" alt="自動化產品2">
+		          		</div>
+		        	</div>
+		        	<div class="col border border-3 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<h5 class="py-1 my-1 text-white">防爆箱、線材加工元件及工具</h5>
+		          			<img class="img-fluid my-1" src="images/pic4-1.jpg" alt="防爆箱">
+		          			<img class="img-fluid py-1 my-1" src="images/pic4-2.jpg" alt="線材加工元件">
+		          		</div>
+		        	</div>
+		      	</div>
+		    </div>
 		</div>
 
-		<!-- Scripts -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/jquery.scrollex.min.js"></script>
-		<script src="js/browser.min.js"></script>
-		<script src="js/breakpoints.min.js"></script>
-		<script src="js/util.js"></script>
-		<script src="js/main.js"></script>
+		<!-- 廣泛的行業應用 -->
+	  	<div class="album py-3 bg-body-tertiary bg-dark">
+		    <div class="container text-center">
+		    	<div class="row py-2">
+		      		<h1 class="text-white">廣泛的行業應用</h1>
+		      	</div>
+		      	<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon1.png" alt="機械設備">
+		          			<h5 class="py-1 my-1 text-white">機械設備</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon2.png" alt="自動化">
+		          			<h5 class="py-1 my-1 text-white">自動化</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon3.png" alt="樓宇電梯">
+		          			<h5 class="py-1 my-1 text-white">樓宇電梯</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon4.png" alt="船舶">
+		          			<h5 class="py-1 my-1 text-white">船舶</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon5.png" alt="鋼鐵與石化">
+		          			<h5 class="py-1 my-1 text-white">鋼鐵與石化</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon6.png" alt="半導體">
+		          			<h5 class="py-1 my-1 text-white">半導體</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon7.png" alt="倉儲與搬運設備">
+		          			<h5 class="py-1 my-1 text-white">倉儲與搬運設備</h5>
+		          		</div>
+		        	</div>
+		        	<div class="col border border-2 border-white">
+		          		<div class="card shadow-sm bg-dark">
+		          			<img class="img-fluid py-5 px-5" src="images/icon8.png" alt="能源與儲能">
+		          			<h5 class="py-1 my-1 text-white">能源與儲能</h5>
+		          		</div>
+		        	</div>
+		      	</div>
 
-	</body>
+		    </div>
+		</div>
+
+	</main>
+
+    <footer id="footer">
+        <!-- pageFooter.html -->
+    </footer>
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/global.js"></script>
+
+	<script>
+	</script>
+</body>
 </html>
