--- a/g-ton/pageFooter.html
+++ b/g-ton/pageFooter.html
@@ -1,11 +1,41 @@
-<ul class="icons">
-	<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-	<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-	<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-	<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-	<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-	<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-</ul>
-<ul class="copyright">
-	<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-</ul>
+<div class="container bg-dark">
+  <footer class="row row-cols-2 row-cols-sm-2 row-cols-md-4 py-2 my-2 border-top">
+
+    <div class="col mb-3 py-3 my-3 text-center">
+		<img src="images/taiwan.png" width="150" height="220" alt="taiwan">
+    </div>
+
+    <div class="col mb-3 py-3 my-3">
+		<h5 class="text-white">服務範圍</h5>
+      	<ul class="nav flex-column">
+	        <li class="nav-item mb-2 text-white">新竹</li>
+	        <li class="nav-item mb-2 text-white">苗栗</li>
+	        <li class="nav-item mb-2 text-white">台中</li>
+	        <li class="nav-item mb-2 text-white">彰化</li>
+	        <li class="nav-item mb-2 text-white">南投</li>
+	        <li class="nav-item mb-2 text-white">雲林</li>
+      	</ul>
+    </div>
+
+    <div class="col mb-3 py-3 my-3">
+      	<ul class="nav flex-column">
+	        <li class="nav-item mb-2 text-white">
+	        	<img src="images/address-icon.png" width="24" height="24" alt="address-icon">&nbsp;台中市北屯區松竹路一段881號11-5
+	        </li>
+	        <li class="nav-item mb-2 text-white">
+	        	<img src="images/phone-icon.png" width="24" height="24" alt="phone-icon">&nbsp;04-2435-0970
+	        </li>
+	        <li class="nav-item mb-2 text-white">
+	        	<img src="images/fax-icon.png" width="24" height="24" alt="fax-icon">&nbsp;04-2435-1170
+	        </li>
+	        <li class="nav-item mb-2 text-white">
+	        	<img src="images/email-icon.png" width="24" height="24" alt="fax-icon">&nbsp;bensontsai0968@gmail.com
+	        </li>
+      	</ul>
+    </div>
+
+    <div class="col mb-3 py-3 my-3 text-center">
+      	<img src="images/line-qrcode.jpg" width="150" height="150" alt="line-qrcode">
+    </div>
+  </footer>
+</div>
