--- a/g-ton/pageHeader.html
+++ b/g-ton/pageHeader.html
@@ -1,25 +1,30 @@
-<h1 id="logo"><a href="index.html">G-TON</a></h1>
-<nav id="nav">
-	<ul>
-		<li><a href="index.html">公司簡介(首頁)</a></li>
-		<li>
-			<a href="#">產品介紹</a>
-			<ul>
-				<li><a href="left-sidebar.html">產品1</a></li>
-				<li><a href="right-sidebar.html">產品2</a></li>
-				<li><a href="no-sidebar.html">產品3</a></li>
-				<li>
-					<a href="#">電子產品</a>
-					<ul>
-						<li><a href="#">手機</a></li>
-						<li><a href="#">電腦</a></li>
-						<li><a href="#">耳機</a></li>
-					</ul>
-				</li>
-			</ul>
-		</li>
-		<li><a href="elements.html">最新消息</a></li>
-		<li><a href="elements.html">聯絡我們</a></li>
-		<li><a href="#" class="button primary">登錄</a></li>
-	</ul>
+<nav class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top">
+    <div class="container-xl">
+      	<a class="navbar-brand" href="#">
+      		<img src="images/logo.png" width="110" height="55" alt="logo">
+      	</a>
+      	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+        	<span class="navbar-toggler-icon"></span>
+      	</button>
+
+	    <div class="collapse navbar-collapse" id="navbarsExample07XL">
+	        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+	          <li class="nav-item px-5">
+	            <a class="nav-link active" aria-current="page" href="#">Home</a>
+	          </li>
+	          <li class="nav-item px-5">
+	            <a class="nav-link" href="#product">Product</a>
+	          </li>
+	          <li class="nav-item px-5">
+	            <a class="nav-link" href="#application">Application</a>
+	          </li>
+	          <li class="nav-item px-5">
+	            <a class="nav-link" href="#About Us">About Us</a>
+	          </li>
+	          <li class="nav-item px-5">
+	            <a class="nav-link" href="#Content Us">Content Us</a>
+	          </li>
+	        </ul>
+      	</div>
+    </div>
 </nav>
