--- a/g-ton/index.html
+++ b/g-ton/index.html
@@ -80,50 +80,50 @@
 		    	<div class="row py-2">
 		      		<h1 class="text-white">廣泛的行業應用</h1>
 		      	</div>
-		      	<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-		        	<div class="col border border-2 border-white">
+		      	<div class="row row-cols-2 row-cols-sm-2 row-cols-md-8">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon1.png" alt="機械設備">
 		          			<h5 class="py-1 my-1 text-white">機械設備</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon2.png" alt="自動化">
 		          			<h5 class="py-1 my-1 text-white">自動化</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon3.png" alt="樓宇電梯">
 		          			<h5 class="py-1 my-1 text-white">樓宇電梯</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon4.png" alt="船舶">
 		          			<h5 class="py-1 my-1 text-white">船舶</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon5.png" alt="鋼鐵與石化">
 		          			<h5 class="py-1 my-1 text-white">鋼鐵與石化</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon6.png" alt="半導體">
 		          			<h5 class="py-1 my-1 text-white">半導體</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon7.png" alt="倉儲與搬運設備">
 		          			<h5 class="py-1 my-1 text-white">倉儲與搬運設備</h5>
 		          		</div>
 		        	</div>
-		        	<div class="col border border-2 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<img class="img-fluid py-5 px-5" src="images/icon8.png" alt="能源與儲能">
 		          			<h5 class="py-1 my-1 text-white">能源與儲能</h5>
