--- a/g-ton/index.html
+++ b/g-ton/index.html
@@ -42,28 +42,28 @@
 		      		<h1 class="text-white">完整的產品方案</h1>
 		      	</div>
 		      	<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-		        	<div class="col border border-3 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<h5 class="py-1 my-1 text-white">低壓工程開關及安全產品</h5>
 		          			<img class="img-fluid my-1" src="images/pic1-1.jpg" alt="低壓工程開關">
 		          			<img class="img-fluid py-1 my-1" src="images/pic1-2.jpg" alt="安全產品">
 		          		</div>
 		        	</div>
-		        	<div class="col border border-3 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<h5 class="py-1 my-1 text-white">電氣/通訊連接</h5>
 		          			<img class="img-fluid my-1" src="images/pic2-1.jpg" alt="電氣連接">
 		          			<img class="img-fluid py-1 my-1" src="images/pic2-2.jpg" alt="通訊連接">
 		          		</div>
 		        	</div>
-		        	<div class="col border border-3 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<h5 class="py-1 my-1 text-white">自動化產品</h5>
 		          			<img class="img-fluid my-1" src="images/pic3-1.jpg" alt="自動化產品1">
 		          			<img class="img-fluid py-1 my-1" src="images/pic3-2.jpg" alt="自動化產品2">
 		          		</div>
 		        	</div>
-		        	<div class="col border border-3 border-white">
+		        	<div class="col">
 		          		<div class="card shadow-sm bg-dark">
 		          			<h5 class="py-1 my-1 text-white">防爆箱、線材加工元件及工具</h5>
 		          			<img class="img-fluid my-1" src="images/pic4-1.jpg" alt="防爆箱">
