--- a/g-ton/index.html
+++ b/g-ton/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="G-Ton">
+    <meta name="description" content="G-Ton的服務宗旨在提供客戶各產業完整的機電配套方案及更即時的物料供給流程，G-Ton提供多品牌符合CE、UL及其他地區及行業專用認證產品。產品包含:低壓工程開關,安全產品,電氣連接,通訊連接,自動化產品,防爆箱,線材加工元件等...機電零部件">
+    <meta name="keywords" content="G-Ton,技騰,低壓工程開關,安全產品,電氣連接,通訊連接,自動化產品,防爆箱,線材加工元件">
     <meta name="author" content="Benson">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
 
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-	  	<section class="py-5 text-center bg-dark">
+	  	<section id="home" class="py-5 text-center bg-dark">
 		    <div class="row py-lg-5">
 		      <div class="col-lg-auto col-md-8 mx-auto">
 		        <h1 class="fw-light text-white">邁向下一個工業時代</h1>
@@ -36,7 +36,7 @@
 	  	</section>
 
 	  	<!-- 完整的產品方案 -->
-	  	<div class="album py-3 bg-body-tertiary bg-dark">
+	  	<div id="product" class="album py-3 bg-body-tertiary bg-dark">
 		    <div class="container text-center">
 		    	<div class="row py-2">
 		      		<h1 class="text-white">完整的產品方案</h1>
@@ -75,7 +75,7 @@
 		</div>
 
 		<!-- 廣泛的行業應用 -->
-	  	<div class="album py-3 bg-body-tertiary bg-dark">
+	  	<div id="application" class="album py-3 bg-body-tertiary bg-dark">
 		    <div class="container text-center">
 		    	<div class="row py-2">
 		      		<h1 class="text-white">廣泛的行業應用</h1>
